--- a/investigaciones.html
+++ b/investigaciones.html
@@ -6,6 +6,7 @@
     body { background-color:#f6f8fa; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif; color:#24292f; }
     .container { max-width:900px; margin:auto; background:white; border-radius:14px; padding:50px 60px; box-shadow:0 10px 30px rgba(0,0,0,0.06); }
     h2 { margin-bottom:20px; }
+    h3.phase { margin-top:40px; color:#24292f; font-size:1.2em; text-decoration:underline; }
     .project-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:20px; }
     .project-card { background:#f6f8fa; border-radius:10px; padding:15px; text-align:center; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
     .project-card a { color:#1f6feb; font-style:italic; text-decoration:none; display:block; margin-top:8px; }
@@ -17,42 +18,45 @@
 <div class="container">
   <h2>Investigaciones</h2>
 
+  <!-- ORDENAMIENTO TERRITORIAL -->
   <div class="project-grid">
-    <!-- ORDENAMIENTO TERRITORIAL -->
     <div class="project-card">
       <strong>Estrategias Integrales para el Ordenamiento Territorial</strong>
       <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver PDF</a>
     </div>
-
-    <!-- COCA Y PIB -->
     <div class="project-card">
       <strong>Impacto Económico de la Producción de Coca en el PIB</strong>
       <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver PDF</a>
     </div>
-
-    <!-- ÍNDICE MULTIDIMENSIONAL -->
     <div class="project-card">
       <strong>Índice Multidimensional de Bogotá</strong>
       <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver PDF</a>
     </div>
-
-    <!-- MODELO AMBIENTAL -->
     <div class="project-card">
       <strong>Modelo de Interacción Ambiental – Parque Alma Viva</strong>
       <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver PDF</a>
     </div>
-
-    <!-- DE LA GUERRA A LA SOÑADA PAZ -->
     <div class="project-card">
       <strong>De la Guerra a la Soñada Paz</strong>
       <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver PDF</a>
     </div>
+  </div>
 
-    <!-- FORMULACIÓN DE PROYECTOS – ECOHOTEL LOS ARRENDAJOS -->
+  <!-- PROYECTO ECOHOTEL -->
+  <h3 class="phase">Fase 1: Introducción y Contexto</h3>
+  <div class="project-grid">
+    <div class="project-card">
+      <strong>Generalidades del Proyecto – Ecohotel</strong>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver PDF</a>
+    </div>
     <div class="project-card">
       <strong>Estudio Normativo – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver PDF</a>
     </div>
+  </div>
+
+  <h3 class="phase">Fase 2: Análisis Estratégico y Stakeholders</h3>
+  <div class="project-grid">
     <div class="project-card">
       <strong>Mapa de Valor – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver PDF</a>
@@ -73,6 +77,10 @@
       <strong>Tipos de Involucrados – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver PDF</a>
     </div>
+  </div>
+
+  <h3 class="phase">Fase 3: Mercado y Proyecciones</h3>
+  <div class="project-grid">
     <div class="project-card">
       <strong>Mercado Potencial – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver PDF</a>
@@ -81,6 +89,10 @@
       <strong>Proyección de Mercado – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver PDF</a>
     </div>
+  </div>
+
+  <h3 class="phase">Fase 4: Modelo de Negocio</h3>
+  <div class="project-grid">
     <div class="project-card">
       <strong>Modelo CANVAS – Ecohotel</strong>
       <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver PDF</a>
