--- a/investigaciones.html
+++ b/investigaciones.html
@@ -2,109 +2,121 @@
 <head>
   <meta charset="UTF-8">
   <title>INVE | DSBC</title>
-  <style>
-    body { background-color:#f6f8fa; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif; color:#24292f; }
-    .container { max-width:900px; margin:auto; background:white; border-radius:14px; padding:50px 60px; box-shadow:0 10px 30px rgba(0,0,0,0.06); }
-    h2 { margin-bottom:20px; }
-    h3.phase { margin-top:40px; color:#24292f; font-size:1.2em; text-decoration:underline; }
-    .project-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:20px; margin-top:20px; }
-    .project-card { background:#f6f8fa; border-radius:10px; padding:15px; text-align:center; box-shadow:0 4px 12px rgba(0,0,0,0.05); }
-    .project-card a { color:#1f6feb; font-style:italic; text-decoration:none; display:block; margin-top:8px; }
-  </style>
 </head>
 
 <body>
 
-<div class="container">
-  <h2>Investigaciones</h2>
+<div style="background-color:#f6f8fa; padding:60px 20px;">
+  <div style="
+    max-width:900px;
+    margin:auto;
+    background:white;
+    border-radius:14px;
+    padding:50px 60px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.06);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
+    color:#24292f;
+  ">
 
-  <!-- ORDENAMIENTO TERRITORIAL -->
-  <div class="project-grid">
-    <div class="project-card">
-      <strong>Estrategias Integrales para el Ordenamiento Territorial</strong>
-      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Impacto Económico de la Producción de Coca en el PIB</strong>
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Índice Multidimensional de Bogotá</strong>
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Modelo de Interacción Ambiental – Parque Alma Viva</strong>
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>De la Guerra a la Soñada Paz</strong>
-      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver PDF</a>
-    </div>
+    <h2>Investigaciones</h2>
+
+    <!-- ORDENAMIENTO TERRITORIAL -->
+    <h3 style="color:#1f6feb; margin-bottom:4px;">
+      Estrategias Integrales para el Ordenamiento Territorial
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Avance de investigación – Subregión Ariari (Meta)
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.
+    </p>
+
+    <!-- COCA Y PIB -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Impacto Económico de la Producción de Coca en el PIB
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Investigación económica aplicada
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Análisis del impacto económico de la producción de coca en el PIB del departamento de Nariño durante el periodo 1999–2023.
+    </p>
+
+    <!-- ÍNDICE MULTIDIMENSIONAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Índice Multidimensional de Bogotá
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento de análisis estadístico
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Estudio del comportamiento del índice multidimensional en Bogotá entre 2013 y 2023 con enfoque socioeconómico.
+    </p>
+
+    <!-- MODELO AMBIENTAL -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      Modelo de Interacción Ambiental
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Parque Metropolitano Alma Viva
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Propuesta de modelo de interacción ambiental aplicada al parque con énfasis en sostenibilidad y gestión urbana.
+    </p>
+
+    <!-- DE LA GUERRA A LA SOÑADA PAZ -->
+    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:4px;">
+      De la Guerra a la Soñada Paz
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Documento de investigación
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Investigación sobre procesos de paz y transformación social en el territorio.
+    </p>
+
+    <!-- PROYECTO ECOHOTEL -->
+    <h3 style="color:#1f6feb; margin-top:40px; margin-bottom:4px;">
+      Proyecto Ecohotel “Los Arrendajos”
+    </h3>
+    <p style="margin:0; font-style:italic; color:#1f6feb;">
+      <a href="proyecto-ecohotel.html"
+         target="_blank"
+         style="color:inherit; text-decoration:none;">
+        Ver fases del proyecto
+      </a>
+    </p>
+    <p style="margin-top:8px; line-height:1.6;">
+      Desarrollo completo del proyecto Ecohotel “Los Arrendajos”, organizado por fases: introducción, stakeholders, mercado y modelo de negocio.
+    </p>
+
+    <p style="margin-top:40px;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
+        ← Volver a la página principal
+      </a>
+    </p>
+
   </div>
-
-  <!-- PROYECTO ECOHOTEL -->
-  <h3 class="phase">Fase 1: Introducción y Contexto</h3>
-  <div class="project-grid">
-    <div class="project-card">
-      <strong>Generalidades del Proyecto – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Estudio Normativo – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver PDF</a>
-    </div>
-  </div>
-
-  <h3 class="phase">Fase 2: Análisis Estratégico y Stakeholders</h3>
-  <div class="project-grid">
-    <div class="project-card">
-      <strong>Mapa de Valor – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Mapeo de Stakeholders – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Relación de Actores – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Stakeholders – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Tipos de Involucrados – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver PDF</a>
-    </div>
-  </div>
-
-  <h3 class="phase">Fase 3: Mercado y Proyecciones</h3>
-  <div class="project-grid">
-    <div class="project-card">
-      <strong>Mercado Potencial – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver PDF</a>
-    </div>
-    <div class="project-card">
-      <strong>Proyección de Mercado – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver PDF</a>
-    </div>
-  </div>
-
-  <h3 class="phase">Fase 4: Modelo de Negocio</h3>
-  <div class="project-grid">
-    <div class="project-card">
-      <strong>Modelo CANVAS – Ecohotel</strong>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver PDF</a>
-    </div>
-  </div>
-
-  <p style="margin-top:40px;">
-    <a href="index.html" style="color:#1f6feb; text-decoration:none;">
-      ← Volver a la página principal
-    </a>
-  </p>
-
 </div>
 
 </body>
