--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -2,125 +2,163 @@
 <head>
   <meta charset="UTF-8">
   <title>Fases del Proyecto Ecohotel | DSBC</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f6f8fa;
+      color: #24292f;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 960px;
+      margin: 60px auto;
+      background-color: #fff;
+      border-radius: 14px;
+      padding: 50px 60px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+    h2 {
+      color: #1f6feb;
+      margin-bottom: 20px;
+      font-size: 28px;
+      border-bottom: 2px solid #1f6feb;
+      padding-bottom: 8px;
+    }
+    p.description {
+      margin-bottom: 30px;
+      line-height: 1.6;
+      font-size: 16px;
+    }
+    .card {
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      background-color: #f9f9f9;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+    }
+    .card h3 {
+      margin: 0 0 10px 0;
+      color: #1f6feb;
+      font-size: 20px;
+    }
+    .card p {
+      margin: 0 0 12px 0;
+      line-height: 1.6;
+      font-size: 15px;
+    }
+    .card a {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #1f6feb;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+    .card a:hover {
+      background-color: #155bb5;
+    }
+    .back-link {
+      display: inline-block;
+      margin-top: 40px;
+      color: #1f6feb;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
 
-<div style="background-color:#f6f8fa; padding:60px 20px;">
-  <div style="
-    max-width:900px;
-    margin:auto;
-    background:white;
-    border-radius:14px;
-    padding:50px 60px;
-    box-shadow:0 10px 30px rgba(0,0,0,0.06);
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
-    color:#24292f;
-  ">
-
+  <div class="container">
     <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
-    <p style="margin-bottom:24px;">
-      Desarrollo integral del proyecto de turismo sostenible, organizado por fases con sus respectivos documentos de soporte.
+    <p class="description">
+      Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, organizado por fases con sus respectivos documentos de soporte. Cada fase refleja un paso clave en la formulación y planificación del proyecto.
     </p>
 
-    <!-- Estudio Normativo -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Estudio Normativo</h3>
-      <p style="margin:0 0 8px 0;">Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 1: Estudio Normativo -->
+    <div class="card">
+      <h3>Fase 1: Estudio Normativo</h3>
+      <p>Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Generalidades del Proyecto -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Generalidades del Proyecto</h3>
-      <p style="margin:0 0 8px 0;">Presentación del proyecto Ecohotel Los Arrendajos, objetivos, alcance y contexto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 2: Generalidades del Proyecto -->
+    <div class="card">
+      <h3>Fase 2: Generalidades del Proyecto</h3>
+      <p>Presentación del proyecto Ecohotel Los Arrendajos: objetivos, alcance y contexto general.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Mapa de Valor -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Mapa de Valor</h3>
-      <p style="margin:0 0 8px 0;">Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 3: Mapa de Valor -->
+    <div class="card">
+      <h3>Fase 3: Mapa de Valor</h3>
+      <p>Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos para clientes y stakeholders.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Mapeo de Stakeholders -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Mapeo de Stakeholders</h3>
-      <p style="margin:0 0 8px 0;">Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 4: Mapeo de Stakeholders -->
+    <div class="card">
+      <h3>Fase 4: Mapeo de Stakeholders</h3>
+      <p>Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Relación de Actores -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Relación de Actores</h3>
-      <p style="margin:0 0 8px 0;">Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 5: Relación de Actores -->
+    <div class="card">
+      <h3>Fase 5: Relación de Actores</h3>
+      <p>Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Stakeholders -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Stakeholders</h3>
-      <p style="margin:0 0 8px 0;">Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 6: Stakeholders -->
+    <div class="card">
+      <h3>Fase 6: Stakeholders</h3>
+      <p>Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Mercado Potencial -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Mercado Potencial</h3>
-      <p style="margin:0 0 8px 0;">Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 7: Mercado Potencial -->
+    <div class="card">
+      <h3>Fase 7: Mercado Potencial</h3>
+      <p>Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Proyección de Mercado -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Proyección de Mercado</h3>
-      <p style="margin:0 0 8px 0;">Estimación de ingresos y demanda a futuro para el proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 8: Proyección de Mercado -->
+    <div class="card">
+      <h3>Fase 8: Proyección de Mercado</h3>
+      <p>Estimación de ingresos y demanda a futuro para el proyecto Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Modelo CANVAS -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Modelo CANVAS</h3>
-      <p style="margin:0 0 8px 0;">Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 9: Modelo CANVAS -->
+    <div class="card">
+      <h3>Fase 9: Modelo CANVAS</h3>
+      <p>Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- Tipos de Involucrados -->
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; margin-bottom:16px;">
-      <h3 style="margin:0 0 8px 0; color:#1f6feb;">Tipos de Involucrados</h3>
-      <p style="margin:0 0 8px 0;">Clasificación de los diferentes tipos de actores y su grado de involucramiento.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- Fase 10: Tipos de Involucrados -->
+    <div class="card">
+      <h3>Fase 10: Tipos de Involucrados</h3>
+      <p>Clasificación de los diferentes tipos de actores y su grado de involucramiento en el proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <p style="margin-top:40px;">
-      <a href="investigaciones.html" style="color:#1f6feb; text-decoration:none;">
-        ← Volver a Investigaciones
-      </a>
-    </p>
-
+    <a class="back-link" href="investigaciones.html">← Volver a Investigaciones</a>
   </div>
-</div>
 
 </body>
 </html>
