--- a/investigaciones.html
+++ b/investigaciones.html
@@ -1,126 +1,130 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>INVE | DSBC</title>
+  <title>Investigaciones | DSBC</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f6f8fa;
+      color: #24292f;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 950px;
+      margin: 60px auto;
+      background-color: #fff;
+      border-radius: 14px;
+      padding: 50px 60px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.06);
+    }
+    h2 {
+      color: #1f6feb;
+      font-size: 28px;
+      border-bottom: 2px solid #1f6feb;
+      padding-bottom: 8px;
+      margin-bottom: 30px;
+    }
+    h3 {
+      color: #1f6feb;
+      margin-top: 24px;
+      margin-bottom: 12px;
+    }
+    p {
+      line-height: 1.6;
+      margin-top: 0;
+      margin-bottom: 12px;
+    }
+    .doc-card {
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      background-color: #f9f9f9;
+      padding: 18px 20px;
+      max-width: 480px;
+      margin-bottom: 18px;
+    }
+    .doc-card h4 {
+      margin: 0 0 8px 0;
+      color: #1f6feb;
+      font-size: 18px;
+    }
+    .doc-card a {
+      text-decoration: none;
+      color: #1f6feb;
+      font-weight: bold;
+    }
+    .doc-card a:hover {
+      text-decoration: underline;
+    }
+    .section-link {
+      margin-top: 12px;
+      display: inline-block;
+      color: #1f6feb;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .section-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
 
-<div style="background-color:#f6f8fa; padding:60px 20px;">
-  <div style="
-    max-width:900px;
-    margin:auto;
-    background:white;
-    border-radius:14px;
-    padding:50px 60px;
-    box-shadow:0 10px 30px rgba(0,0,0,0.06);
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', serif;
-    color:#24292f;
-  ">
+  <div class="container">
 
     <h2>Investigaciones</h2>
 
     <!-- ORDENAMIENTO TERRITORIAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      Estrategias Integrales para el Ordenamiento Territorial
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.
-    </p>
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
-      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Avance de investigación – Subregión Ariari (Meta)
-      </h4>
-      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">
-        Ver documento
-      </a>
+    <h3>Estrategias Integrales para el Ordenamiento Territorial</h3>
+    <p>Documento de avance investigativo orientado al análisis del ordenamiento territorial y el desarrollo regional sostenible.</p>
+    <div class="doc-card">
+      <h4>Avance de investigación – Subregión Ariari (Meta)</h4>
+      <a href="soportes/investigaciones/avance-investigacion-ordenamiento-territorial-meta.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- COCA Y PIB -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      Impacto Económico de la Producción de Coca en el PIB
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante el periodo 1999–2023.
-    </p>
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
-      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Investigación de política agraria
-      </h4>
-      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- IMPACTO ECONOMICO -->
+    <h3>Impacto Económico de la Producción de Coca en el PIB</h3>
+    <p>Análisis del impacto económico de la producción de coca en el Producto Interno Bruto del departamento de Nariño durante 1999–2023.</p>
+    <div class="doc-card">
+      <h4>Investigación económica aplicada</h4>
+      <a href="soportes/investigaciones/impacto-economico-coca-pib-narino-1999-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <!-- ÍNDICE MULTIDIMENSIONAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      Índice Multidimensional de Bogotá
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre los años 2013 y 2023, con enfoque socioeconómico.
-    </p>
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
-      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Evolución del Índice Multidimensional de Bogotá: 2013–2023
-      </h4>
-      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">
-        Ver documento
-      </a>
+    <!-- INDICE MULTIDIMENSIONAL -->
+    <h3>Índice Multidimensional de Bogotá</h3>
+    <p>Estudio del comportamiento del índice multidimensional en la ciudad de Bogotá entre 2013 y 2023, con enfoque socioeconómico.</p>
+    <div class="doc-card">
+      <h4>Documento de análisis estadístico</h4>
+      <a href="soportes/investigaciones/indice-multidimensional-bogota-2013-2023.pdf" target="_blank">Ver documento</a>
     </div>
 
     <!-- MODELO AMBIENTAL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      Modelo de Interacción Ambiental
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión ambiental urbana.
-    </p>
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
-      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva
-      </h4>
-      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">
-        Ver documento
-      </a>
+    <h3>Modelo de Interacción Ambiental</h3>
+    <p>Propuesta de modelo de interacción ambiental aplicada al Parque Metropolitano Alma Viva, con énfasis en sostenibilidad y gestión urbana.</p>
+    <div class="doc-card">
+      <h4>Modelo de Interacción Ambiental – Parque Metropolitano Alma Viva</h4>
+      <a href="soportes/investigaciones/modelo-interaccion-ambiental-alma-viva.pdf" target="_blank">Ver documento</a>
     </div>
 
     <!-- DE LA GUERRA A LA SOÑADA PAZ -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      De la Guerra a la Soñada Paz
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.
-    </p>
-    <div style="border:1px solid #ddd; border-radius:8px; padding:16px; background:#f9f9f9; max-width:400px;">
-      <h4 style="margin:0 0 8px 0; color:#1f6feb;">
-        Columbia: Caminos hacia la Paz y la Reconstrucción
-      </h4>
-      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">
-        Ver documento
-      </a>
+    <h3>De la Guerra a la Soñada Paz</h3>
+    <p>Investigación sobre procesos de construcción de paz y reconciliación en contextos posconflicto.</p>
+    <div class="doc-card">
+      <h4>Columbia: Caminos hacia la Paz y la Reconstrucción</h4>
+      <a href="soportes/investigaciones/de-la-guerra-a-la-sonada-paz.pdf" target="_blank">Ver documento</a>
     </div>
 
     <!-- PROYECTO ECOHOTEL -->
-    <h3 style="color:#1f6feb; margin-top:24px; margin-bottom:12px;">
-      Proyecto Ecohotel “Los Arrendajos”
-    </h3>
-    <p style="margin-top:0; margin-bottom:12px; line-height:1.6;">
-      Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, incluyendo planificación, análisis de mercado y gestión de actores.
-    </p>
-    <h4 style="margin-top:12px;">
-      <a href="fases-ecohotel.html" style="color:#1f6feb; text-decoration:none;">
-        Fases del proyecto
-      </a>
-    </h4>
+    <h3>Proyecto Ecohotel “Los Arrendajos”</h3>
+    <p>Desarrollo integral del proyecto de turismo sostenible, incluyendo planificación, análisis de mercado y gestión de actores.</p>
+    <a href="fases-ecohotel.html" class="section-link">Fases del proyecto →</a>
 
     <p style="margin-top:40px;">
-      <a href="index.html" style="color:#1f6feb; text-decoration:none;">
-        ← Volver a la página principal
-      </a>
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
     </p>
 
   </div>
-</div>
 
 </body>
 </html>
