--- a/experiencia.html
+++ b/experiencia.html
@@ -11,7 +11,7 @@
       padding: 0;
     }
     .container {
-      max-width: 960px;
+      max-width: 950px;
       margin: 60px auto;
       background-color: #fff;
       border-radius: 14px;
@@ -20,54 +20,51 @@
     }
     h2 {
       color: #1f6feb;
-      margin-bottom: 30px;
       font-size: 28px;
       border-bottom: 2px solid #1f6feb;
       padding-bottom: 8px;
+      margin-bottom: 40px;
     }
-    .card {
+    h3 {
+      color: #1f6feb;
+      margin-top: 32px;
+      margin-bottom: 12px;
+      font-size: 22px;
+    }
+    p {
+      line-height: 1.6;
+      margin-top: 0;
+      margin-bottom: 12px;
+    }
+    .doc-card {
       border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 20px;
+      border-radius: 10px;
       background-color: #f9f9f9;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-      transition: transform 0.2s, box-shadow 0.2s;
+      padding: 18px 20px;
+      max-width: 480px;
+      margin-bottom: 24px;
     }
-    .card:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-    }
-    .card h3 {
+    .doc-card h4 {
       margin: 0 0 8px 0;
       color: #1f6feb;
-      font-size: 20px;
+      font-size: 18px;
     }
-    .card p {
-      margin: 0 0 10px 0;
-      line-height: 1.6;
-    }
-    .card a {
-      display: inline-block;
+    .doc-card a {
       text-decoration: none;
-      background-color: #1f6feb;
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    .card a:hover {
-      background-color: #155bb5;
-    }
-    .back-link {
-      display: inline-block;
-      margin-top: 40px;
       color: #1f6feb;
-      text-decoration: none;
       font-weight: bold;
     }
-    .back-link:hover {
+    .doc-card a:hover {
+      text-decoration: underline;
+    }
+    .section-link {
+      margin-top: 12px;
+      display: inline-block;
+      color: #1f6feb;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .section-link:hover {
       text-decoration: underline;
     }
   </style>
@@ -76,30 +73,36 @@
 <body>
 
   <div class="container">
+
     <h2>Experiencia</h2>
 
     <!-- PASANTÍA / EPI -->
-    <div class="card">
-      <h3>Pasantía en Investigación</h3>
-      <p>Apoyo en procesos de investigación académica, análisis de información y elaboración de insumos para trabajos investigativos.</p>
+    <h3>Pasantía en Investigación</h3>
+    <p>Participación en procesos de investigación académica, incluyendo análisis de datos y elaboración de informes técnicos.</p>
+    <div class="doc-card">
+      <h4>Certificado EPI – Pasantía en Investigación</h4>
       <a href="soportes/experiencia/pasantia-investigacion.pdf" target="_blank">Ver documento</a>
     </div>
 
     <!-- PORFÍA 1 -->
-    <div class="card">
-      <h3>Apoyo Técnico Administrativo – Porfía 1</h3>
-      <p>Apoyo en procesos administrativos, organización documental y manejo de información institucional.</p>
+    <h3>Apoyo Técnico Administrativo</h3>
+    <p>Gestión administrativa y soporte en procesos operativos de la Asociación de HCB Porfía 1.</p>
+    <div class="doc-card">
+      <h4>Certificado Laboral – Asociación de HCB Porfía 1</h4>
       <a href="soportes/experiencia/apoyo-tecnico-porfia-1.pdf" target="_blank">Ver documento</a>
     </div>
 
     <!-- PORFÍA 3 -->
-    <div class="card">
-      <h3>Apoyo Técnico Administrativo – Porfía 3</h3>
-      <p>Apoyo técnico y administrativo en procesos operativos y acompañamiento a la gestión institucional.</p>
+    <h3>Apoyo Técnico Administrativo</h3>
+    <p>Asistencia en la gestión documental y administrativa, fortaleciendo la eficiencia de procesos institucionales en Porfía 3.</p>
+    <div class="doc-card">
+      <h4>Certificado Laboral – Asociación de HCB Porfía 3</h4>
       <a href="soportes/experiencia/apoyo-tecnico-porfia-3.pdf" target="_blank">Ver documento</a>
     </div>
 
-    <a class="back-link" href="index.html">← Volver a la página principal</a>
+    <p style="margin-top:40px;">
+      <a href="index.html" style="color:#1f6feb; text-decoration:none;">← Volver a la página principal</a>
+    </p>
 
   </div>
 
